@@ -23,6 +23,11 @@ const Gameboard = (function () {
     }
   }
 
+  board[0][0] = "X";
+  board[1][1] = "X";
+  board[2][2] = "X";
+
+  console.table(board);
   // get entire gameboard
   const getBoard = () => board;
 
@@ -105,7 +110,31 @@ function GameController(
     );
     board.dropMarker(Cell, getActivePlayer().marker);
 
-    // win conditions here
+    // check for win conditions
+    function checkWin(board) {
+      // check rows
+      for (let i = 0; i < board.length; i++) {
+        if (board[i][0] === board[i][1] && board[i][1] === board[i][2]) {
+          return board[i][0];
+        }
+      }
+      // check columns
+      for (let i = 0; i < board[0].length; i++) {
+        if (board[0][i] === board[1][i] && board[1][i] === board[2][i]) {
+          return board[0][i];
+        }
+      }
+      // check diagonals
+      if (board[0][0] === board[1][1] && board[1][1] === board[2][2]) {
+        return board[0][0];
+      }
+      if (board[0][2] === board[1][1] && board[1][1] === board[2][0]) {
+        return board[0][2];
+      }
+      return null;
+    }
+
+    console.log(checkWin(board));
 
     // switch player turn
     switchPlayerTurn();
